--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "docker:sbom": "syft packages $npm_config_image_tag -o cyclonedx-json --file sbom.json",
     "install:syft": "sudo node scripts/installSyft.js",
     "start": "NODE_CONFIG_DIR=./build/src/config node build/src/monoApp.js",
-    "start:dev": "LOGGING_PRETTY_PRINT=true NODE_CONFIG_DIR=./src/config NODE_ENV=dev nodemon",
+    "start:dev": "NODE_CONFIG_DIR=./src/config NODE_ENV=dev nodemon",
     "start:services": "docker-compose -f docker-compose.yml up -d",
     "stop:services": "docker-compose -f docker-compose.yml down",
     "lint": "eslint --ext .ts src/",
@@ -41,16 +41,16 @@
   },
   "homepage": "https://github.com/bryopsida/hermes#readme",
   "dependencies": {
-    "@bull-board/fastify": "^3.11.0",
-    "@fastify/auth": "^2.0.0",
-    "@fastify/basic-auth": "^3.0.2",
-    "@fastify/helmet": "^8.1.0",
+    "@bull-board/fastify": "4.x.x",
+    "@fastify/auth": "3.x.x",
+    "@fastify/basic-auth": "4.x.x",
+    "@fastify/helmet": "9.x.x",
     "@fastify/oauth2": "^5.0.0",
     "argon2": "^0.28.5",
     "axios": "^0.27.2",
     "bull": "^4.8.2",
     "config": "^3.3.7",
-    "fastify": "^3.29.0",
+    "fastify": "4.x.x",
     "librdkafka": "^0.0.0",
     "lodash": "^4.17.21",
     "middie": "^7.0.0",
