--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "docker:sbom": "syft packages $npm_config_image_tag -o cyclonedx-json --file sbom.json",
     "install:syft": "sudo node scripts/installSyft.js",
     "start": "NODE_CONFIG_DIR=./build/src/config node build/src/monoApp.js",
-    "start:dev": "NODE_CONFIG_DIR=./src/config NODE_ENV=dev nodemon",
+    "start:dev": "HERMES_TASK_RUNNER_FETCH_USERNAME=admin HERMES_TASK_RUNNER_FETCH_PASSWORD=admin LOGGING_PRETTY_PRINT=true NODE_CONFIG_DIR=./src/config NODE_ENV=dev nodemon",
     "start:services": "docker-compose -f docker-compose.yml up -d",
     "stop:services": "docker-compose -f docker-compose.yml down",
     "lint": "eslint --ext .ts src/",
@@ -28,7 +28,9 @@
     "minikube:start": "minikube start --cpus=4 --memory=8192 --disk-size=40G",
     "minikube:stop": "minikube stop",
     "minikube:delete": "minikube delete",
-    "test:e2e": "jest --testPathPattern='tests/.*\\.rest\\.spec\\.ts'"
+    "test:e2e": "jest --testPathPattern='tests/.*\\.rest\\.spec\\.ts'",
+    "test:postman:docker": "newman run postman/collections/Hermes.postman_collection.json -e postman/envs/hermes.docker.dev.postman_environment.json",
+    "test:postman:k8s": "newman run postman/collections/Hermes.postman_collection.json -e postman/envs/hermes.k8s.dev.postman_environment.json"
   },
   "repository": {
     "type": "git",
@@ -56,8 +58,8 @@
     "middie": "^7.0.0",
     "mongoose": "^6.3.2",
     "node-rdkafka": "^2.12.0",
-    "pino": "^8.0.0",
-    "pino-pretty": "^8.0.0"
+    "pino": "8.x.x",
+    "pino-pretty": "8.x.x"
   },
   "devDependencies": {
     "@octokit/rest": "^18.12.0",
@@ -75,6 +77,7 @@
     "eslint-plugin-promise": "^6.0.0",
     "jest": "^27.5.1",
     "moq.ts": "^9.0.0",
+    "newman": "^5.3.2",
     "nodemon": "^2.0.15",
     "proxyquire": "^2.1.3",
     "supertest": "^6.2.2",
