--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "docker:sbom": "syft packages $npm_config_image_tag -o cyclonedx-json --file sbom.json",
     "install:syft": "sudo node scripts/installSyft.js",
     "start": "NODE_CONFIG_DIR=./build/src/config node build/src/monoApp.js",
-    "start:dev": "HERMES_TASK_RUNNER_FETCH_USERNAME=admin HERMES_TASK_RUNNER_FETCH_PASSWORD=admin LOGGING_PRETTY_PRINT=true NODE_CONFIG_DIR=./src/config NODE_ENV=dev nodemon",
+    "start:dev": "HERMES_TASK_RUNNER_FETCH_USERNAME=admin HERMES_TASK_RUNNER_FETCH_PASSWORD=admin NODE_CONFIG_DIR=./src/config NODE_ENV=dev nodemon",
     "start:services": "docker-compose -f docker-compose.yml up -d",
     "stop:services": "docker-compose -f docker-compose.yml down",
     "lint": "eslint --ext .ts src/",
@@ -82,7 +82,7 @@
     "nodemon": "^2.0.15",
     "proxyquire": "^2.1.3",
     "supertest": "^6.2.2",
-    "testcontainers": "^8.7.1",
+    "testcontainers": "^8.11.0",
     "ts-jest": "^27.1.3",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.2",
