--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "bull": "^4.8.2",
     "config": "^3.3.7",
     "fastify": "4.x.x",
+    "inversify": "^6.0.1",
     "ioredis": "^4.28.5",
     "librdkafka": "^0.0.0",
     "lodash": "^4.17.21",
@@ -60,7 +61,8 @@
     "mongoose": "^6.3.2",
     "node-rdkafka": "^2.12.0",
     "pino": "8.x.x",
-    "pino-pretty": "8.x.x"
+    "pino-pretty": "8.x.x",
+    "reflect-metadata": "^0.1.13"
   },
   "devDependencies": {
     "@octokit/rest": "^18.12.0",
