--- a/helm/hermes/templates/secrets.yml
+++ b/helm/hermes/templates/secrets.yml
@@ -34,3 +34,28 @@ data:
   username: {{ .Values.fetchUsername | b64enc | quote }}
   password: {{ .Values.fetchPassword | b64enc | quote }}
 {{- end }}
+{{/* If a secret is not provided for sealing the key store values, create one with random values */}}
+{{- if not .Values.keyStoreSecretName }}
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: {{ .Release.Name }}-internal-key-store
+type: Opaque
+data:
+  key-store-password: {{ randAscii 32 | b64enc | b64enc | quote }}
+  key-store-salt: {{ randAscii 16 | b64enc | b64enc | quote }}
+  key-store-context: {{ randAscii 32 | b64enc | b64enc | quote }}
+{{- end }}
+{{/* If a secret is not provided for the master key, create one using a strong random generator */}}
+{{- if not .Values.masterKeySecretName }}
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: {{ .Release.Name }}-internal-master-key
+type: Opaque
+data:
+  master-key: {{ randAscii 32 | b64enc | b64enc | quote }}
+  master-key-context: {{ randAscii 32 | b64enc | b64enc | quote }}
+{{- end }}
