--- a/package.json
+++ b/package.json
@@ -76,14 +76,14 @@
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^6.0.0",
-    "jest": "^27.5.1",
+    "jest": "28.x.x",
     "moq.ts": "^9.0.0",
     "newman": "^5.3.2",
     "nodemon": "^2.0.15",
     "proxyquire": "^2.1.3",
     "supertest": "^6.2.2",
     "testcontainers": "^8.11.0",
-    "ts-jest": "^27.1.3",
+    "ts-jest": "28.x.x",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.2",
     "yaml": "^2.0.1"
