--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,21 +39,16 @@ jobs:
     name: "Smoke Test"
     runs-on: ubuntu-latest
     timeout-minutes: 30
-    container:
-      # TODO: move this to a published image on this repo with the installs pre-done
-      image: node:17.8.0-alpine
     steps:
     - name: Checkout repository
       uses: actions/checkout@v3
-    - name: Install Build-Tools
-      run: apk add --update --no-cache python3 make g++ bash
     - name: Setup Cache
       uses: actions/cache@v3
       with:
         path: ~/.npm
-        key: alpine-node-${{ hashFiles('**/package-lock.json') }}
+        key: ubuntu-node-${{ hashFiles('**/package-lock.json') }}
         restore-keys: |
-          alpine-node-
+          ubuntu-node-
     - name: Install Dependencies
       run: npm ci
     - name: Lint
@@ -372,7 +367,9 @@ jobs:
         TEST_HOST: "hermes.local"
         TEST_PORT: "443"
         NODE_EXTRA_CA_CERTS: /tmp/hermes.local.ca.crt
-      run: npm run test:e2e
+      run: |
+        npm run test:e2e
+        npm run test:postman:k8s
     - name: Collect Info On Failure
       if: failure()
       run: |
