--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "docker:sbom": "syft packages $npm_config_image_tag -o cyclonedx-json --file sbom.json",
     "install:syft": "sudo node scripts/installSyft.js",
     "start": "NODE_CONFIG_DIR=./build/src/config node build/src/monoApp.js",
-    "start:dev": "NODE_CONFIG_DIR=./src/config NODE_ENV=dev nodemon",
+    "start:dev": "HERMES_TASK_RUNNER_FETCH_USERNAME=admin HERMES_TASK_RUNNER_FETCH_PASSWORD=admin NODE_CONFIG_DIR=./src/config NODE_ENV=dev nodemon",
     "start:services": "docker-compose -f docker-compose.yml up -d",
     "stop:services": "docker-compose -f docker-compose.yml down",
     "lint": "eslint --ext .ts src/",
@@ -28,7 +28,9 @@
     "minikube:start": "minikube start --cpus=4 --memory=8192 --disk-size=40G",
     "minikube:stop": "minikube stop",
     "minikube:delete": "minikube delete",
-    "test:e2e": "jest --testPathPattern='tests/.*\\.rest\\.spec\\.ts'"
+    "test:e2e": "jest --testPathPattern='tests/.*\\.rest\\.spec\\.ts'",
+    "test:postman:docker": "newman run postman/collections/Hermes.postman_collection.json -e postman/envs/hermes.docker.dev.postman_environment.json",
+    "test:postman:k8s": "newman run postman/collections/Hermes.postman_collection.json -e postman/envs/hermes.k8s.dev.postman_environment.json"
   },
   "repository": {
     "type": "git",
@@ -51,13 +53,14 @@
     "bull": "^4.8.2",
     "config": "^3.3.7",
     "fastify": "4.x.x",
+    "ioredis": "^4.28.5",
     "librdkafka": "^0.0.0",
     "lodash": "^4.17.21",
     "middie": "^7.0.0",
     "mongoose": "^6.3.2",
     "node-rdkafka": "^2.12.0",
-    "pino": "^8.0.0",
-    "pino-pretty": "^8.0.0"
+    "pino": "8.x.x",
+    "pino-pretty": "8.x.x"
   },
   "devDependencies": {
     "@octokit/rest": "^19.0.0",
@@ -73,13 +76,14 @@
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^6.0.0",
-    "jest": "^27.5.1",
+    "jest": "28.x.x",
     "moq.ts": "^9.0.0",
+    "newman": "^5.3.2",
     "nodemon": "^2.0.15",
     "proxyquire": "^2.1.3",
     "supertest": "^6.2.2",
-    "testcontainers": "^8.7.1",
-    "ts-jest": "^27.1.3",
+    "testcontainers": "^8.11.0",
+    "ts-jest": "28.x.x",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.2",
     "yaml": "^2.0.1"
