--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "config": "^3.3.7",
     "fastify": "4.x.x",
     "ioredis": "^4.28.5",
+    "jsonata": "^1.8.6",
     "librdkafka": "^0.0.0",
     "lodash": "^4.17.21",
     "middie": "^7.0.0",
