--- a/helm/hermes/templates/secrets.yml
+++ b/helm/hermes/templates/secrets.yml
@@ -4,6 +4,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: {{ .Release.Name }}-internal-redis
+  namespace: {{ .Release.Namespace }}
   annotations:
     "helm.sh/hook": pre-install
 data:
@@ -15,6 +16,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: {{ .Release.Name }}-internal-mongodb
+  namespace: {{ .Release.Namespace }}
   annotations:
     "helm.sh/hook": pre-install
 type: Opaque
@@ -29,6 +31,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: {{ .Release.Name }}-internal-hermes-fetch
+  namespace: {{ .Release.Namespace }}
 type: Opaque
 data:
   username: {{ .Values.fetchUsername | b64enc | quote }}
@@ -41,6 +44,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: {{ .Release.Name }}-internal-key-store
+  namespace: {{ .Release.Namespace }}
 type: Opaque
 data:
   key-store-password: {{ randAscii 32 | b64enc | b64enc | quote }}
@@ -54,6 +58,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: {{ .Release.Name }}-internal-master-key
+  namespace: {{ .Release.Namespace }}
 type: Opaque
 data:
   master-key: {{ randAscii 32 | b64enc | b64enc | quote }}
