--- a/helm/hermes/templates/certificates.yaml
+++ b/helm/hermes/templates/certificates.yaml
@@ -5,6 +5,7 @@ apiVersion: cert-manager.io/v1
 kind: ClusterIssuer
 metadata:
   name: {{ .Release.Name }}-cluster-issuer
+  namespace: {{ .Release.Namespace }}
 spec:
   selfSigned: {}
 ---
@@ -12,6 +13,7 @@ apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
   name: {{ .Release.Name }}-ca-certificate
+  namespace: {{ .Release.Namespace }}
 spec:
   isCA: true
   commonName: {{ .Release.Name }}-self-signed-ca
@@ -28,6 +30,7 @@ apiVersion: cert-manager.io/v1
 kind: Issuer
 metadata:
   name: {{ .Release.Name }}-issuer
+  namespace: {{ .Release.Namespace }}
 spec:
   ca:
     secretName: {{ .Release.Name }}-root-ca-secret
@@ -38,6 +41,7 @@ apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
   name: {{ $.Release.Name }}-tls-certificate-{{ .secretName}}
+  namespace: {{ .Release.Namespace }}
 spec:
   secretName: {{ .secretName }}
   dnsNames:
