--- a/helm/hermes/templates/config.yaml
+++ b/helm/hermes/templates/config.yaml
@@ -2,5 +2,6 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: {{ .Release.Name }}-config
+  namespace: {{ .Release.Namespace }}
 data:
 {{ tpl ((.Files.Glob "config/*").AsConfig | indent 2) . }}
