--- a/helm/hermes/templates/service.yaml
+++ b/helm/hermes/templates/service.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ include "hermes.fullname" . }}
+  namespace: {{ .Release.Namespace }}
   labels:
     {{- include "hermes.labels" . | nindent 4 }}
 spec:
